--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
