--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
+		"test:snap": "jest --updateSnapshot",
 		"test": "jest --watch",
 		"test:ci": "jest --ci"
 	},
 	"dependencies": {
+		"axios": "^1.4.0",
 		"next": "latest",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"swr": "^2.1.5"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "5.16.4",
@@ -18,6 +21,7 @@
 		"@testing-library/user-event": "14.4.3",
 		"@types/react": "18.0.28",
 		"@types/testing-library__jest-dom": "5.14.5",
+		"axios-mock-adapter": "^1.21.4",
 		"jest": "29.5.0",
 		"jest-environment-jsdom": "29.5.0",
 		"typescript": "4.9.5"
