--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 		"build": "next build",
 		"start": "next start",
 		"test:snap": "jest --updateSnapshot",
-		"test": "jest --watch",
-		"test:ci": "jest --ci"
+		"test:cov": "jest --coverage",
+		"test": "jest --watch"
 	},
 	"dependencies": {
 		"axios": "^1.4.0",
